--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   flutter:
     sdk: flutter
   popup_window: ^1.0.0+3
+  qr_flutter: ^3.1.0
+  image_gallery_saver: ^1.1.0
+  image_picker: ^0.6.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
