--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   qr_flutter: ^3.1.0
   image_gallery_saver: ^1.1.0
   image_picker: ^0.6.7
+  flutter_screenutil: ^1.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
