--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   image_picker: ^0.6.7
   permission_handler: ^4.2.0
   flutter_screenutil: ^1.0.2
+  http: '>=0.11.3+12'
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
