--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,15 @@ dependencies:
   image_picker: ^0.6.7
   permission_handler: ^4.2.0
   flutter_screenutil: ^1.0.2
+  shared_preferences: ^0.5.6
+  fluttertoast: ^3.1.3
+  dio: ^3.0.9
+  dio_cookie_manager: ^1.0.0
+  cookie_jar: ^1.0.1
+  path_provider: ^1.5.1
+  extended_image: ^0.7.1
+  fluro: ^1.5.1
+  get_it: ^3.0.3
   http: '>=0.11.3+12'
 
   # The following adds the Cupertino Icons font to your application.
